# Potluck

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  vercel.json
contracts/pool/: Cargo.toml
contracts/pool/src/: contract.rs  error.rs  msg.rs  state.rs
design-spec/: Landing and Onboarding (1).html  build-status.md  extracted-tokens.md
public/design-spec/: Clear the Table.html  Ski Trip 2026 (1).html
scripts/: deploy-contract.sh  get-treasury-address.mjs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/pools/: route.ts
src/app/api/pools/[id]/: route.ts
src/app/api/username/resolve/: route.ts
src/app/claim-handle/: page.tsx
src/app/dashboard/: page.tsx
src/app/p/[id]/: page.tsx
src/app/p/[id]/archive/: page.tsx
src/app/p/[id]/settle/: page.tsx
src/app/p/new/: page.tsx
src/components/chrome/: AppNav.tsx
src/components/identity/: AddressDetails.tsx  UsernameBadge.tsx
src/components/potluck/: AddExpenseModal.tsx  AutoSignPrompt.tsx  BalanceBoard.tsx  ContributionModal.tsx  ExpenseFeed.tsx  LandingPage.tsx  SettlementFlow.tsx  WithdrawToChainModal.tsx
src/components/ui/: Arc.tsx  Avatar.tsx  CTABtn.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  inline-svg.tsx  input.tsx  separator.tsx
src/lib/db/: supabase.ts
src/lib/design/: tokens.ts
src/lib/initia/: autosign.ts  bridge.ts  chain.ts  client.ts  display.ts  on-chain-balance.ts  treasury.ts  tx-errors.ts  username.ts
src/lib/potluck/: calc.ts  types.ts
supabase/migrations/: 001_initial.sql
(+3 files in other folders)
