[package]
name = "potluck-pool"
version = "0.1.0"
edition = "2021"
authors = ["Potluck Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/cosmwasm_2_1"]
library = []

[dependencies]
cosmwasm-std = { version = "2.1", features = ["staking", "cosmwasm_2_1"] }
cosmwasm-schema = "2.1"
cw-storage-plus = "2.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-vm = { version = "2.1", default-features = false }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
